...
            }
            onKeyPress={(e) => editor.handleKeyPress(e.nativeEvent)}
            androidExperimentalSynchronousEvents={
              ANDROID_EXPERIMENTAL_SYNCHRONOUS_EVENTS
            }
            onPasteImages={(e) => editor.handlePasteImagesEvent(e.nativeEvent)}
            testID="editor-input"
          />
          <Toolbar
            stylesState={editor.stylesState}
            editorRef={editor.ref}
            onOpenLinkModal={editor.openLinkModal}
            onSelectImage={editor.openImageModal}
...
          />
        </View>
        <Button
          title="Test Screen"
          onPress={onSwitch}
          style={styles.valueButton}
          testID="toggle-screen-button"
        />
        <TextRenderer nodes={textNodes} />
      </ScrollView>
      <LinkModal
        isOpen={editor.isLinkModalOpen}
        editedText={
...
