...
      >
        <View style={styles.buttonRow}>
          <Button
            title="Test Screen"
            onPress={onSwitch}
            style={styles.rowButton}
            testID="toggle-screen-button"
          />
          <Button
            title="Set Text"
            onPress={() => setIsModalOpen(true)}
            style={styles.rowButton}
            testID="set-enriched-text-button"
...
              style={styles.rowButton}
              testID="number-of-lines-2-button"
            />
          </View>
        </View>
        {html !== null && (
          <View style={styles.rendererContainer} testID="enriched-text">
            <EnrichedText
              style={styles.text}
              htmlStyle={enrichedTextHtmlStyle}
              numberOfLines={numberOfLines}
              ellipsizeMode={ellipsizeMode}
              onLinkPress={handleLinkPress}
...
