appId: swmansion.enriched.example
---

- tapOn:
    id: "toolbar-link"

- waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: "link-modal-submit-button"
    timeout: 10000

- tapOn:
    id: "link-modal-text-input"

- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: ${LINK_TEXT}

- tapOn:
    id: "link-modal-url-input"

- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: ${LINK_URL}

- tapOn:
    id: "link-modal-submit-button"
