appId: swmansion.enriched.example
---
# PR #257 - fix: handle style conflicts during automatic links detection
- launchApp

- tapOn:
    id: "toggle-screen-button"

- tapOn:
    id: "editor-input"

- tapOn:
    id: "toolbar-code-block"

- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "Hello example.com"

- assertVisible:
    id: "toolbar-link"
    enabled: false

- runFlow:
    file: "../subflows/capture_or_assert_screenshot.yaml"
    env:
      SCREENSHOT_NAME: "codeblock_no_link_detection"
