appId: swmansion.enriched.example
---
# Verifies that pasting inline code into a code block removes inline code style correctly.
- launchApp

- tapOn:
    id: 'toggle-screen-button'

- tapOn:
    id: 'editor-input'

- tapOn:
    id: 'toolbar-inline-code'
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'code'

- runFlow:
    when:
      platform: iOS
    commands:
      - doubleTapOn:
          id: 'editor-input'
          point: '10%, 30%'
- runFlow:
    when:
      platform: Android
    commands:
      - longPressOn:
          id: 'editor-input'
          point: '10%, 30%'
      - tapOn:
          text: 'Select all'

- tapOn:
    text: 'Copy'
- tapOn:
    id: 'editor-input'
    point: '70%, 30%'

- tapOn:
    id: 'toolbar-inline-code'

- pressKey: Enter
- tapOn:
    id: 'toolbar-code-block'

- runFlow:
    when:
      platform: iOS
    commands:
      - doubleTapOn:
          id: 'editor-input'
          point: '10%, 70%'
- runFlow:
    when:
      platform: Android
    commands:
      - longPressOn:
          id: 'editor-input'
          point: '10%, 70%'

- tapOn:
    text: 'Paste'

- runFlow:
    file: '../subflows/capture_or_assert_screenshot.yaml'
    env:
      SCREENSHOT_NAME: 'inline_code_paste_into_codeblock'
