appId: swmansion.enriched.example
---
# Validates that inserting newlines after bold element does not break the layout
- launchApp

- tapOn:
    id: 'toggle-screen-button'

- tapOn:
    id: 'editor-input'

- pressKey: Enter
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'Line one'
- pressKey: Enter
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'Line two'
- pressKey: Enter
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'Line three'
- pressKey: Enter
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'Line four'
- pressKey: Enter
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'Line five'

# Tap on the first line to position cursor there
- tapOn:
    id: 'editor-input'
    point: '10%,10%'

- tapOn:
    id: 'toolbar-bold'

- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'bold'
- pressKey: Enter
- pressKey: Enter
- pressKey: Enter
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'bold2'

- runFlow:
    file: '../subflows/capture_or_assert_screenshot.yaml'
    env:
      SCREENSHOT_NAME: 'line_overlapping'
