appId: swmansion.enriched.example
---
# PR #359 - fix: android span watcher
- launchApp

- tapOn:
    id: "toggle-screen-button"

- tapOn:
    id: "editor-input"

- tapOn:
    id: "toolbar-ordered-list"

- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "A"
- pressKey: Enter
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "B"
- pressKey: Enter
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "C"

# Tap on the second line to position cursor there
- tapOn:
    id: "editor-input"
    point: "50%,50%"

- pressKey: backspace
- pressKey: backspace

- runFlow:
    file: "../subflows/capture_or_assert_screenshot.yaml"
    env:
      SCREENSHOT_NAME: "ordered_list_renumbering_after_emptying_second_line"

- tapOn:
    id: "editor-input"
    point: "50%,50%"

- pressKey: backspace

- runFlow:
    file: "../subflows/capture_or_assert_screenshot.yaml"
    env:
      SCREENSHOT_NAME: "ordered_list_renumbering_after_deleting_second_line"
