appId: swmansion.enriched.example
---
# Visually validates rendering of block-level paragraph styles:
# blockquote and code block, each with multiple lines.
- launchApp

- tapOn:
    id: "toggle-screen-button"

- tapOn:
    id: "editor-input"

- tapOn:
    id: "toolbar-quote"
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "Quote 1"
- pressKey: Enter
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "Quote 2"
- pressKey: Enter
- tapOn:
    id: "toolbar-quote"

- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "Normal paragraph"
- pressKey: Enter

- tapOn:
    id: "toolbar-code-block"
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "Code 1"
- pressKey: Enter
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "Code 2"

- runFlow:
    file: "../subflows/capture_or_assert_screenshot.yaml"
    env:
      SCREENSHOT_NAME: "paragraph_styles_blocks"
