appId: swmansion.enriched.example
---
# Validates that image press events are triggered correctly
- launchApp

- tapOn:
    id: 'toggle-screen-button'

- tapOn:
    id: 'toggle-enriched-text-screen-button'

- runFlow:
    file: '../subflows/set_enriched_text_value.yaml'
    env:
      VALUE: '<html><img src="https://picsum.photos/id/1/200/200" width="200" height="200"/></html>'

- tapOn:
    id: 'enriched-text'
    point: '5%,50%'

- runFlow:
    file: '../subflows/capture_or_assert_screenshot.yaml'
    env:
      SCREENSHOT_NAME: 'image_press'
